# SLAE

./: .gitignore  CMakeLists.txt  README.md
Task 1/: CMakeLists.txt  a.out
Task 1/src/: run_through_3_diag_matrix.cpp  tests.cpp
Task2_graphs/: CMakeLists.txt  dense_CSR.cpp  dense_CSR.hpp  result1.txt  slae.py  testspeed.cpp
Task4_graphs/: CMakeLists.txt  simple_iter.cpp  simple_iter.hpp  slae.py  slae2.py  testiter.cpp  testspeed.cpp
Task5_graphs/: dense_CSR.cpp  dense_CSR.hpp  matrix.txt  out  out1  result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  simple_iter copy.cpp  simple_iter.cpp  simple_iter.hpp  simple_iter1.cpp  simple_iter1.hpp  slae.py  slae2.py  testiter.cpp  testspeed.cpp  three_diag_generator.py
Task6.2_graphs/: matrix.txt  slae.py  slae3.py  test.cpp
Task7_graphs/: CMakeLists.txt  slae.py  slae3.py  test.cpp
Task8_graphs/: CMakeLists.txt  slae.py  slae1.py  slae2.py  test.cpp
for_tests/: Iter_solvers.cpp
src/: CMakeLists.txt  dense_CSR.cpp  dense_CSR.hpp  result2.txt  result3.txt  result4.txt  speed.out  test.cpp  testspeed.cpp
src/libSLAE/: GMRES.cpp  GMRES.hpp  Householder_alg.cpp  Householder_alg.hpp  Iter_solvers.cpp  Iter_solvers.hpp  Precise_solvers.cpp  Precise_solvers.hpp  Test_speed_tools.cpp  Test_speed_tools.hpp  Thomas_alg.cpp  Thomas_alg.hpp  dense_CSR.cpp  dense_CSR.hpp  simple_iter.cpp  simple_iter.hpp  test_Chebyshev.cpp
tests/: test_Arnoldi_alg.cpp  test_Chebyshev.cpp  test_GMREs.cpp  test_Householder.cpp  test_Thomas.cpp  test_dense_CSR.cpp  test_simple_iter.cpp  (+1 more)
